--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A 11ty UWDS template.",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d _site",
     "build": "npm run assets:build && npx @11ty/eleventy",
     "assets:autoprefix": "postcss _site/assets/styles/*.css _site/assets/methods/styles/*.css -r --use autoprefixer",
     "assets:build": "node ./config/buildAssets && npm run assets:autoprefix",
@@ -42,6 +43,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "gh-pages": "^6.3.0",
     "html-validate": "^8.24.2",
     "js-yaml": "^4.1.0",
     "jsdom": "^22.1.0",
